# PRX

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
Claude_notes/: unit_tests.md
algorithm/: __init__.py  contrastive_flow_matching.py  ema.py  lpips.py  perceptual_dino.py  repa.py  sprint.py  tread.py
callbacks/: __init__.py  feature_extractors.py  log_diffusion_images.py  log_fid.py  log_generation_metrics.py
configs/yamls/: dose-response-clip.yaml  dose-response-safeclip.yaml  dose-response-sft.yaml  dose-response-speedrun.yaml
configs/yamls/JIT-benchmark/: EMA.yaml  JIT-Baseline.yaml  JIT-debug.yaml  LPIPS.yaml  Perceptual_DINO.yaml  REPA-V2.yaml  REPA-V3.yaml  REPA_e.yaml  SPRINT.yaml  TREAD.yaml  contrastive.yaml  dose-response-speedrun.yaml  resolution_aware.yaml
configs/yamls/dataset/: eval_unsplash.yaml  train_alchemist.yaml  train_dose_c0.yaml  train_dose_c0_gemini.yaml  train_dose_c1.yaml  train_dose_c1_gemini.yaml  train_dose_c2.yaml  train_dose_c2_gemini.yaml  train_dose_c3.yaml  train_dose_c3_gemini.yaml  train_dose_c4.yaml  train_dose_c4_gemini.yaml  train_dose_c5.yaml  train_dose_c5_gemini.yaml  train_dose_c6.yaml  train_dose_c6_gemini.yaml  train_small.yaml  train_small_captions.yaml
configs/yamls/dose-response/: speedrun_medium.yaml
configs/yamls/flux1-vae-benchmark/: EMA.yaml  Flux-Baseline.yaml  LPIPS.yaml  Perceptual_DINO.yaml  Qwen3VL.yaml  REPA-V2.yaml  REPA-V3.yaml  REPA_e.yaml  SPRINT.yaml  TREAD.yaml  bf16.yaml  contrastive.yaml  iREPA-V2.yaml  iREPA-V3.yaml  resolution_aware.yaml
configs/yamls/model/: prx_base.yaml  prx_dcae_small.yaml  prx_flux2.yaml  prx_jit_32_medium.yaml  prx_jit_32_small.yaml  (+2 more)
dataset/: __init__.py  dataset.py  mds_dataset.py  mds_patches.py  transforms.py
models/: __init__.py  prx.py  prx_layers.py  text_tower.py  vae_tower.py
pipeline/: __init__.py  models_factory.py  pipeline.py
prx/: __init__.py
prx/algorithm/: __init__.py  contrastive_flow_matching.py  ema.py  lpips.py  perceptual_dino.py  repa.py  resolution_aware.py  sprint.py  tread.py
prx/callbacks/: __init__.py  log_diffusion_images.py  log_generation_metrics.py
prx/dataset/: __init__.py  constants.py  dataset.py  mds_dataset.py  transforms.py
prx/models/: __init__.py  prx.py  text_tower.py  vae_tower.py
prx/pipeline/: __init__.py  composer_pipeline.py  fm_pipeline.py  models_factory.py  pipeline.py
prx/rewards/: __init__.py  base.py
prx/schedulers/: __init__.py  scheduler.py
prx/training/: optimizer.py  seed_utils.py  train.py
schedulers/: __init__.py  scheduler.py
scripts/: fine-t2i-to-mds.py
tests/: conftest.py  test_contrastive_flow_matching.py  test_ema.py  test_repa.py  test_sprint.py  test_tread.py
tests/integration/: conftest.py  test_pipeline.py  test_text_tower.py  test_vae_tower.py
tests/unit/: test_contrastive_flow_matching.py  test_dataset.py  test_ema.py  test_fm_pipeline.py  test_pipeline_unit.py  test_prx_layers.py  test_repa.py  test_resolution_aware.py  test_scheduler.py  test_sprint.py  test_text_tower_tokenization.py  test_tread.py
training/: optimizer.py  train.py
(+72 files in other folders)
